--- a/index.html
+++ b/index.html
@@ -1,71 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;900&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;900&display=swap"
+      rel="stylesheet"
+    />
     <title>CSS Animations</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
 
-        body {
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-family: 'Roboto', sans-serif;
-            background-color: #10ac84;
-        }
+      body {
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: "Roboto", sans-serif;
+        background-color: #10ac84;
+      }
 
-        a {
-            position: absolute;
-            text-decoration: none;
-            text-transform: uppercase;
-            padding: 25px 50px;
-            background-color: white;
-            color: #777;
-            border-radius: 100px;
-            font-size: 24px;
-            transition: all .2s;
-        }
+      a {
+        text-decoration: none;
+        position: relative;
+        width: 250px;
+        height: 80px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        color: #250e74;
+        border: 4px solid #250e74;
+        font-size: 24px;
+        letter-spacing: 3px;
+        text-transform: uppercase;
+        transition: all 0.25s;
+        overflow: hidden;
+      }
 
-        a:before {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: white;
-            border-radius: 100px;
-            transition: all .4s;
-            z-index: -1;
-        }
+      a:hover {
+        color: white;
+      }
 
-        a:hover:before {
-            transform: scaleX(1.4) scaleY(1.6);
-            opacity: 0;
-        }
+      a:before {
+        content: "";
+        position: absolute;
+        top: -4px;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        border-top: 40px solid #250e74;
+        border-bottom: 40px solid #250e74;
+        border-right: 40px solid transparent;
+        transition: all 0.5s;
+        z-index: -1;
+        transform: translateX(-100%);
+      }
 
-        a:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 10px 20px rgba(0,0,0,0.2);
-        }
+      a:hover:before {
+        transform: translateX(0%);
+      }
 
-        a:active {
-            transform: translateY(-1px);
-            box-shadow: 0 5px 10px rgba(0,0,0,0.2);
-        }
-        </style>
-</head>
-<body>
-    <a href="#">hover me</a>
-</body>
+      a:after {
+        content: "";
+        position: absolute;
+        top: -4px;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        border-top: 40px solid #250e74;
+        border-bottom: 40px solid #250e74;
+        border-left: 40px solid transparent;
+        transition: all 0.5s;
+        z-index: -1;
+        transform: translateX(100%);
+      }
+
+      a:hover:after {
+        transform: translateX(0%);
+      }
+
+
+    </style>
+  </head>
+  <body>
+    <a href="#">button</a>
+  </body>
 </html>
