--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       img {
         width: 100%;
-        transition: transform 0.5s;
+        transition: all .5s;
       }
 
       .caption {
@@ -51,6 +51,7 @@
         color: white;
         transition: all 0.5s;
         transform: translateX(-100%);
+        background-color: black;
       }
 
       .caption h1 {
@@ -64,12 +65,11 @@
       }
 
       .container:hover .caption {
-        background-color: rgba(0,0,0,0.5);
         transform: translateX(0);
       }
 
       .container:hover img {
-        transform: scale(1.3) rotate(-15deg);
+        transform: translateX(100%);
       }
     </style>
   </head>
