--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
 
       .caption {
         position: absolute;
-        top: 0;
+        bottom: 0;
         left: 0;
         width: 100%;
-        height: 100%;
+        height: 30%;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         color: white;
         transition: all 0.5s;
-        transform: translateX(-100%);
+        transform: translateY(100%);
         background-color: black;
       }
 
@@ -65,11 +65,12 @@
       }
 
       .container:hover .caption {
-        transform: translateX(0);
+        transform: translateY(0);
+
       }
 
       .container:hover img {
-        transform: translateX(100%);
+        transform: translateY(-30%);
       }
     </style>
   </head>
