--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;900&display=swap"
       rel="stylesheet"
     />
     <title>CSS Animations</title>
@@ -23,64 +23,89 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        font-family: "Roboto", sans-serif;
+        background-color: #272727;
       }
 
-      .container {
+      .fig {
         width: 500px;
-        height: 500px;
+        color: white;
+        font-family: "Raleway";
+        border-radius: 10px;
         position: relative;
         overflow: hidden;
       }
 
-      img {
+      .fig img {
         width: 100%;
-        transition: all .5s;
       }
 
-      .caption {
+      .fig:before {
+        content: "";
         position: absolute;
-        bottom: 0;
+        top: 0;
         left: 0;
         width: 100%;
-        height: 30%;
+        height: 100%;
+        background-color: #006266;
+        opacity: 0.5;
+        transform: translateY(100%);
+        transition: all .25s;
+    }
+
+    .fig:hover:before {
+        transform: translateY(0);
+        transition-delay: 0s;
+      }
+
+      .fig .caption {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        color: white;
-        transition: all 0.5s;
-        transform: translateY(100%);
-        background-color: black;
-      }
+        transform: translateY(-20px);
+        opacity: 0;
+        transition: all .25s;
+    }
 
-      .caption h1 {
-        text-transform: uppercase;
-        margin: 0;
-      }
-
-      .caption p {
-        font-size: 18px;
-        text-transform: capitalize;
-      }
-
-      .container:hover .caption {
+    .fig:hover .caption {
         transform: translateY(0);
-
+        transition-delay: 0.3s;
+        opacity: 1;
       }
 
-      .container:hover img {
-        transform: translateY(-30%);
+      .fig h3, .fig h5 {
+        margin: 0;
+        letter-spacing: 1px;
+      }
+
+      .fig h3 {
+        text-transform: uppercase;
+        font-weight: 400;
+        margin-bottom: 5px;
+      }
+
+      .fig h5 {
+        background-color: #ae895d;
+        padding: 3px 5px;
+        font-weight: 600;
       }
     </style>
   </head>
   <body>
-    <div class="container">
-      <img src="./img/kitten.jpg" />
-      <div class="caption">
-        <h1>amazing caption!</h1>
-        <p>you can write anything you want here!</p>
-      </div>
+
+    <div class="fig">
+        <img src="./img/kitten.jpg">
+
+        <div class="caption">
+            <h3>amazing caption!</h3>
+            <h5>you can write anything here</h5>
+        </div>
     </div>
+
   </body>
 </html>
