--- a/index.html
+++ b/index.html
@@ -23,88 +23,32 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: #272727;
+        background-color: #4b4b4b;
       }
 
-      .fig {
-        width: 500px;
-        color: white;
-        font-family: "Raleway";
-        border-radius: 10px;
-        position: relative;
+      div {
+        width: 300px;
+        height: 400px;
+        border: 5px solid white;
         overflow: hidden;
       }
 
-      .fig img {
-        width: 100%;
-      }
-
-      .fig:before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
+      img {
         width: 100%;
         height: 100%;
-        background-color: #006266;
-        opacity: 0.5;
-        transform: translateY(100%);
-        transition: all .25s;
-    }
-
-    .fig:hover:before {
-        transform: translateY(0);
-        transition-delay: 0s;
+        object-fit: cover;
+        transition: transform 1s;
       }
 
-      .fig .caption {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        transform: translateY(-20px);
-        opacity: 0;
-        transition: all .25s;
-    }
-
-    .fig:hover .caption {
-        transform: translateY(0);
-        transition-delay: 0.3s;
-        opacity: 1;
-      }
-
-      .fig h3, .fig h5 {
-        margin: 0;
-        letter-spacing: 1px;
-      }
-
-      .fig h3 {
-        text-transform: uppercase;
-        font-weight: 400;
-        margin-bottom: 5px;
-      }
-
-      .fig h5 {
-        background-color: #ae895d;
-        padding: 3px 5px;
-        font-weight: 600;
+      img:hover {
+        transform: scale(1.2) rotate(9deg);
       }
     </style>
   </head>
   <body>
 
-    <div class="fig">
-        <img src="./img/kitten.jpg">
-
-        <div class="caption">
-            <h3>amazing caption!</h3>
-            <h5>you can write anything here</h5>
-        </div>
+    <div>
+        <img src="img/kitten.jpg">
     </div>
 
   </body>
