--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: #4b4b4b;
+        background-color: #272727;
       }
 
-      div {
-        width: 300px;
-        height: 400px;
-        border: 5px solid white;
+      .container {
+        width: 450px;
+        height: 300px;
+        position: relative;
         overflow: hidden;
       }
 
@@ -37,18 +37,98 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
-        transition: transform 1s;
       }
 
-      img:hover {
-        transform: scale(1.2) rotate(9deg);
+      .container:before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 120%;
+        height: 205%;
+        background-color: #2d3436;
+        opacity: .8;
+        transition: all .25s;
+        transform: translate(550px, 300px) rotate(45deg);
       }
+
+      .container:hover:before {
+        transform: translate(-50px,-150px) rotate(45deg);
+      }
+
+      .caption {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        color: white;
+        text-transform: uppercase;
+      }
+
+      h2 {
+        text-align: center;
+        font-size: 17px;
+        padding: 20px;
+        margin-top: 20px;
+        background-color: rgba(0, 0, 0, 0.8);
+        transform: translate(200px, -200px);
+        transition: all .25s;
+        transition-delay: 0.3s;
+      }
+
+      .container:hover h2 {
+        transform: translate(0);
+      }
+
+      p {
+        font-size: 16px;
+        width: 80%;
+        align-self: center;
+        text-align: center;
+        transition: all 0.25s;
+        transform: translate(-200px, 200px);
+        transition-delay: 0.4s;
+      }
+
+      .container:hover p {
+        transform: translate(0);
+      }
+
+      a {
+        align-self: center;
+        text-decoration: none;
+        background-color: black;
+        color: white;
+        width: 120px;
+        padding: 10px;
+        margin-bottom: 20px;
+        transition: all 0.25s;
+        transform: translateY(100px);
+        font-size: 16px;
+        text-align: center;
+        transition-delay: 0.5sk;
+      }
+
+      .container:hover a {
+        transform: translateY(0);
+      }
+
     </style>
   </head>
   <body>
 
-    <div>
-        <img src="img/kitten.jpg">
+    <div class="container">
+        <img src="./img/kitten.jpg">
+
+        <div class="caption">
+            <h2>image hover</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet totam est ipsum aperiam sunt maiores et laudantium nostrum exercitationem ea modi nisi sed repellat repudiandae sapiente quaerat, repellendus nesciunt accusamus.</p>
+            <a href="#">read more</a>
+        </div>
     </div>
 
   </body>
