--- a/index.html
+++ b/index.html
@@ -31,12 +31,21 @@
         height: 300px;
         position: relative;
         overflow: hidden;
+        background-color: #444;
+        border: 10px solid white;
       }
 
       img {
         width: 100%;
         height: 100%;
         object-fit: cover;
+        transition: all .5s;
+        transition-delay: .5s;
+      }
+
+      .container:hover img {
+        transform: scale(0);
+        transition-delay: 0s;
       }
 
       .container:before {
@@ -46,14 +55,15 @@
         left: 0;
         width: 120%;
         height: 205%;
-        background-color: #2d3436;
+        background-color: #006266;
         opacity: .8;
-        transition: all .2s;
-        transform: translate(650px, -100px) rotate(180deg);
-      }
+        transition: all .5s;
+        transform: scale(0) rotate(-180deg);
+        transition-delay: .5s;
+    }
 
-      .container:hover:before {
-        transform: translate(0) rotate(0deg);
+    .container:hover:before {
+        transform: scale(1) rotate(0deg);
       }
 
       .caption {
@@ -75,14 +85,8 @@
         padding: 20px;
         margin-top: 20px;
         background-color: rgba(0, 0, 0, 0.8);
-        transform: translateY(-150px);
-        transition: all .2s;
-        transition-delay: 0.5s;
       }
 
-      .container:hover h2 {
-        transform: translateY(0);
-      }
 
       p {
         font-size: 16px;
@@ -90,12 +94,6 @@
         align-self: center;
         text-align: center;
         transition: all 0.2s;
-        transform: translateX(300px) rotate(90deg);
-        transition-delay: 0.4s;
-      }
-
-      .container:hover p {
-        transform: translateX(0) rotate(0deg);
       }
 
       a {
@@ -107,14 +105,20 @@
         padding: 10px;
         margin-bottom: 20px;
         transition: all 0.2s;
-        transform: translateY(-300px);
         font-size: 16px;
         text-align: center;
-        transition-delay: 0.5sk;
       }
 
-      .container:hover a {
-        transform: translateY(0px);
+      h2, p, a {
+        opacity: 0;
+        transition: all 0.5s;
+    }
+
+    .container:hover h2,
+    .container:hover p,
+    .container:hover a {
+        opacity: 1;
+        transition-delay: 1s;
       }
 
     </style>
@@ -126,7 +130,7 @@
 
         <div class="caption">
             <h2>image hover</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet totam est ipsum aperiam sunt maiores et laudantium nostrum exercitationem ea modi nisi sed repellat repudiandae sapiente quaerat, repellendus nesciunt accusamus.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet totam est ipsum aperiam sunt maiores et laudantium nostrum exercitationem ea modi nisi sed repellat repudiandae sapiente quaerat.</p>
             <a href="#">read more</a>
         </div>
     </div>
