--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
+        transition: all 0.5s;
+      }
+
+      .container:hover img {
+        transform: rotate(720deg) scale(0);
+        opacity: 0;
       }
 
       .container:before {
@@ -55,6 +61,7 @@
 
       .container:hover:before {
         opacity: 1;
+        transition-delay: 0.5s;
       }
 
       .caption {
@@ -97,25 +104,28 @@
         transition: all 0.2s;
         font-size: 16px;
         text-align: center;
-        transform: translateY(150px);
-        transition: all 0.3s;
+        transform: translateY(-300px);
+        transition: all 0.2s;
       }
 
       .container:hover a {
         transform: translateY(0);
+        transition-delay: 0.5s;
       }
 
-      h2,
-      p {
-        transform: scale(10);
-        opacity: 0;
-        transition: all 0.3s;
+      h2, p {
+        transform: translateY(-300px);
+        transition: all 0.2s;
       }
 
-      .container:hover h2,
       .container:hover p {
-        opacity: 1;
-        transform: scale(1);
+        transform: translateY(0);
+        transition-delay: 0.7s;
+      }
+
+      .container:hover h2 {
+        transform: translateY(0);
+        transition-delay: 0.9s;
       }
     </style>
   </head>
