--- a/index.html
+++ b/index.html
@@ -23,125 +23,68 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: #272727;
+        font-family: 'Inter', sans-serif;
+        background-color: #fffa65;
       }
 
-      .container {
-        width: 450px;
-        height: 300px;
+      ul {
+        list-style: none;
+        display: flex;
+        flex-wrap: wrap;
+      }
+
+      ul li a {
+        text-decoration: none;
+        color: #3d3d3d;
+        font-size: 22px;
+        display: block;
+        padding: 10px 15px;
         position: relative;
         overflow: hidden;
-        background-color: #444;
-        border: 10px solid white;
       }
 
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        transition: all 0.5s;
-      }
-
-      .container:hover img {
-        transform: rotate(720deg) scale(0);
-        opacity: 0;
-      }
-
-      .container:before {
+      a:before {
         content: "";
         position: absolute;
         top: 0;
         left: 0;
-        width: 120%;
-        height: 205%;
-        background-color: #006266;
-        opacity: 0;
-        transition: all 0.3s;
-      }
-
-      .container:hover:before {
-        opacity: 1;
-        transition-delay: 0.5s;
-      }
-
-      .caption {
-        position: absolute;
-        top: 0;
-        left: 0;
         width: 100%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        color: white;
-        text-transform: uppercase;
+        height: 2px;
+        background-color: #3d3d3d;
+        transform: scaleX(0);
+        transform-origin: left;
+        transition: transform .5s;
+    }
+
+    a:after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        width: 100%;
+        height: 2px;
+        background-color: #3d3d3d;
+        transform-origin: right;
+        transform: scaleX(0);
+        transition: transform .5s;
       }
 
-      h2 {
-        text-align: center;
-        font-size: 17px;
-        padding: 20px;
-        margin-top: 20px;
-        background-color: rgba(0, 0, 0, 0.8);
+      a:hover:before,
+      a:hover:after {
+        transform: scaleX(1);
       }
 
-      p {
-        font-size: 16px;
-        width: 80%;
-        align-self: center;
-        text-align: center;
-        transition: all 0.2s;
-      }
 
-      a {
-        align-self: center;
-        text-decoration: none;
-        background-color: black;
-        color: white;
-        width: 120px;
-        padding: 10px;
-        margin-bottom: 20px;
-        transition: all 0.2s;
-        font-size: 16px;
-        text-align: center;
-        transform: translateY(-300px);
-        transition: all 0.2s;
-      }
 
-      .container:hover a {
-        transform: translateY(0);
-        transition-delay: 0.5s;
-      }
-
-      h2, p {
-        transform: translateY(-300px);
-        transition: all 0.2s;
-      }
-
-      .container:hover p {
-        transform: translateY(0);
-        transition-delay: 0.7s;
-      }
-
-      .container:hover h2 {
-        transform: translateY(0);
-        transition-delay: 0.9s;
-      }
     </style>
   </head>
   <body>
-    <div class="container">
-      <img src="./img/kitten.jpg" />
-
-      <div class="caption">
-        <h2>image hover</h2>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet totam
-          est ipsum aperiam sunt maiores et laudantium nostrum exercitationem ea
-          modi nisi sed repellat repudiandae sapiente quaerat.
-        </p>
-        <a href="#">read more</a>
-      </div>
-    </div>
+    <ul role="list">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Contact</a></li>
+    </ul>
   </body>
 </html>
