--- a/index.html
+++ b/index.html
@@ -24,54 +24,65 @@
         justify-content: center;
         align-items: center;
         font-family: 'Inter', sans-serif;
-        background-color: #fffa65;
       }
 
       ul {
-        list-style: none;
         display: flex;
-        flex-wrap: wrap;
+        list-style: none;
       }
 
       ul li a {
-        text-decoration: none;
-        color: #3d3d3d;
+        color: #272727;
         font-size: 22px;
-        display: block;
-        padding: 10px 15px;
+        text-decoration: none;
+        text-transform: uppercase;
+        padding: 5px 10px;
+        margin: 0px 10px;
         position: relative;
-        overflow: hidden;
+        transition: all .5s;
+      }
+
+      a:hover {
+        background-color: #e91e63;
+        color: white;
       }
 
       a:before {
         content: "";
         position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 2px;
-        background-color: #3d3d3d;
-        transform: scaleX(0);
-        transform-origin: left;
-        transition: transform .5s;
-    }
-
-    a:after {
-        content: "";
-        position: absolute;
-        bottom: 0;
-        right: 0;
-        width: 100%;
-        height: 2px;
-        background-color: #3d3d3d;
-        transform-origin: right;
-        transform: scaleX(0);
-        transition: transform .5s;
+        bottom: 12px;
+        left: 12px;
+        width: 12px;
+        height: 12px;
+        border: 3px solid #e91e63;
+        border-width: 0 0 3px 3px;
+        opacity: 0;
+        transition: all 0.3s;
       }
 
-      a:hover:before,
+      a:hover:before {
+        left: -8px;
+        bottom: -8px;
+        opacity: 1;
+      }
+
+      a:after {
+        content: "";
+        position: absolute;
+        top: 12px;
+        right: 12px;
+        width: 12px;
+        height: 12px;
+        border: 3px solid #e91e63;
+        border-width: 3px 3px 0 0;
+        opacity: 0;
+        transition: all 0.3s;
+      }
+
       a:hover:after {
-        transform: scaleX(1);
+        top: -8px;
+        right: -8px;
+        opacity: 1;
       }
 
 
