--- a/index.html
+++ b/index.html
@@ -24,39 +24,51 @@
         justify-content: center;
         align-items: center;
         font-family: "Inter", sans-serif;
-        background-color: #006266;
+        background-color: #222;
       }
 
       ul {
-        list-style: none;
         display: flex;
-      }
-
-      ul:hover a {
-        filter: blur(5px);
-        opacity: 0.2;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
       }
 
       li {
-        margin: 0 20px;
-        transition: .5s;
+        position: relative;
+        list-style-type: none;
+        margin: 5px;
       }
 
       a {
-        display: block;
         position: relative;
+        display: block;
+        height: 40px;
         text-decoration: none;
-        text-transform: uppercase;
-        padding: 5px;
-        font-size: 22px;
-        color: white;
-        transition: all .3s;
+        padding: 5px 10px;
+        font-weight: 300;
+        letter-spacing: 2px;
+        overflow: hidden;
       }
 
-      ul a:hover {
-        transform: scale(1.5);
-        filter: none;
-        opacity: 1;
+      ul li a span {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: 0.5s;
+        color: white;
+        font-size: 20px;
+        text-transform: capitalize;
+        transition-delay: 0.5s;
+      }
+
+      a:hover span:nth-child(1),
+      a:hover span:nth-child(2) {
+        transform: translateY(-100%);
+        transition-delay: 0s;
       }
 
       a:before {
@@ -66,33 +78,49 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: #ee5a24;
-        transition: .3s;
-        transform: scale(0);
-        z-index: -1;
+        background-color: #16a085;
+        transform: scaleX(0);
+        transform-origin: left;
+        transition: 0.5s;
+        transition-delay: 0.5s;
       }
 
       a:hover:before {
-        transform: scale(1);
+        transform: scaleX(1);
       }
     </style>
   </head>
   <body>
-    <ul role="list">
+    <ul>
       <li>
-        <a href="#"> Home </a>
+        <a href="#">
+          <span>Home</span>
+          <span>Home</span>
+        </a>
       </li>
       <li>
-        <a href="#"> About </a>
+        <a href="#">
+          <span>About</span>
+          <span>About</span>
+        </a>
       </li>
       <li>
-        <a href="#"> Services </a>
+        <a href="#">
+          <span>Services</span>
+          <span>Services</span>
+        </a>
       </li>
       <li>
-        <a href="#"> Portfolio </a>
+        <a href="#">
+          <span>Portfolio</span>
+          <span>Portfolio</span>
+        </a>
       </li>
       <li>
-        <a href="#"> Contact </a>
+        <a href="#">
+          <span>Contact</span>
+          <span>Contact</span>
+        </a>
       </li>
     </ul>
   </body>
